--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Sequelize DB for bands to organize their songs and musicians",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "start-dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
     "jest": "27.5.1",
     "sequelize": "6.17.0",
     "sqlite3": "5.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
