--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "dependencies": {
     "express": "^4.17.3",
     "jest": "27.5.1",
-    "sequelize": "6.17.0",
-    "sqlite3": "5.0.2"
+    "sequelize": "^6.21.4",
+    "sqlite3": "^5.0.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
