fix(seed): Add instructions for running seed

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch",
+    "seed": "node seed.js",
     "start-dev": "nodemon server.js"
   },
   "repository": {
